--- a/app/src/main/res/layout/activity_users_list.xml
+++ b/app/src/main/res/layout/activity_users_list.xml
@@ -9,6 +9,7 @@
     tools:context=".UsersListActivity">
 
     <TextView
+        android:id="@+id/users_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
